--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -458,7 +458,7 @@ obj-$(CONFIG_WALL_CLK_SYSFS) += wallclk_sysfs.o
 obj-y += display/
 obj-$(CONFIG_ARCH_MSM8974) += board-htc-8974.o htc_acoustic_alsa.o
 obj-$(CONFIG_ARCH_MSM8226) += board-htc-8x26.o htc_acoustic_alsa.o
-obj-$(CONFIG_MACH_M8) += board-m8-gpiomux.o board-m8-audio.o
+obj-$(CONFIG_MACH_M8) += board-m8-gpiomux.o board-m8-audio.o htc_lpm.o
 obj-$(CONFIG_MACH_M8_WHL) += board-m8-gpiomux.o board-m8-audio.o
 obj-$(CONFIG_MACH_M8_WL) += board-m8-gpiomux.o board-m8-audio.o
 obj-$(CONFIG_MACH_A5) += board-a5-gpiomux.o board-afe-audio-amp.o
