msm: HTC: Import One Mini 2 board files
* HTC kernel package memul-3.4.0-ga072f6c

Change-Id: I5577e0a94207f223516b0cdc40ab4895d6cc6c32

--- a/arch/arm/boot/dts/msm8226.dtsi
+++ b/arch/arm/boot/dts/msm8226.dtsi
@@ -162,8 +162,8 @@
 		interrupts = <0 44 0>;
 		vdd-supply = <&gdsc_venus>;
 		qcom,load-freq-tbl = <352800 160000000>,
-			<244800 133330000>,
-			<108000  66700000>;
+			<215999 133330000>,
+			<108000  66700000>; /* HTC_VIDEO: 215999 is to let 720p@60 run at 160 MHz */
 		qcom,hfi = "venus";
 		qcom,bus-ports = <1>;
 		qcom,reg-presets = <0xE0024 0x0>,
