--- a/arch/arm/mach-msm/display/Makefile
+++ b/arch/arm/mach-msm/display/Makefile
@@ -3,3 +3,5 @@
 obj-$(CONFIG_MACH_M8) += htc_m8-panel.o
 obj-$(CONFIG_MACH_M8_WHL) += htc_m8-panel.o
 obj-$(CONFIG_MACH_M8_WL) += htc_m8-panel.o
+
+obj-$(CONFIG_MACH_MEM_UL) += htc_mem-panel.o
