--- a/arch/arm/configs/cm_a5_defconfig
+++ b/arch/arm/configs/cm_a5_defconfig
@@ -23,6 +23,7 @@ CONFIG_ARCH_HAS_CPU_IDLE_WAIT=y
 CONFIG_GENERIC_HWEIGHT=y
 CONFIG_GENERIC_CALIBRATE_DELAY=y
 CONFIG_NEED_DMA_MAP_STATE=y
+CONFIG_ARCH_WANT_KMAP_ATOMIC_FLUSH=y
 CONFIG_VECTORS_BASE=0xffff0000
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_NEED_MACH_IO_H=y
@@ -527,6 +528,7 @@ CONFIG_MSM_CPR_REGULATOR=y
 CONFIG_HTC_POWER_DEBUG=y
 CONFIG_MACH_A5=y
 CONFIG_MACH_NAME=""
+# CONFIG_HTC_DEBUG_RBCPR_8226 is not set
 
 #
 # System MMU
