--- a/arch/arm/configs/cm_a5_defconfig
+++ b/arch/arm/configs/cm_a5_defconfig
@@ -63,9 +63,7 @@ CONFIG_SYSVIPC_SYSCTL=y
 # CONFIG_FHANDLE is not set
 # CONFIG_TASKSTATS is not set
 CONFIG_AUDIT=y
-CONFIG_AUDITSYSCALL=y
-CONFIG_AUDIT_WATCH=y
-CONFIG_AUDIT_TREE=y
+# CONFIG_AUDITSYSCALL is not set
 # CONFIG_AUDIT_LOGINUID_IMMUTABLE is not set
 CONFIG_HAVE_GENERIC_HARDIRQS=y
 
@@ -401,7 +399,7 @@ CONFIG_HTC_HEADSET_PMIC=y
 CONFIG_HTC_HEADSET_ONE_WIRE=y
 CONFIG_HTC_BATT_CORE=y
 CONFIG_HTC_BATT_8960=y
-# CONFIG_DUTY_CYCLE_LIMIT is not set
+CONFIG_DUTY_CYCLE_LIMIT=y
 # CONFIG_HTC_PWRSINK is not set
 # CONFIG_MSM_FIQ_SUPPORT is not set
 # CONFIG_MSM_SERIAL_DEBUGGER is not set
@@ -415,7 +413,7 @@ CONFIG_MSM_N_WAY_SMD=y
 CONFIG_MSM_N_WAY_SMSM=y
 CONFIG_MSM_SMP2P=y
 CONFIG_MSM_SMP2P_TEST=y
-# CONFIG_MSM_RESET_MODEM is not set
+CONFIG_MSM_RESET_MODEM=y
 # CONFIG_MSM_SMD_LOGGING is not set
 # CONFIG_MSM_IPC_LOGGING is not set
 CONFIG_MSM_SMD_NMEA=y
@@ -466,7 +464,7 @@ CONFIG_MSM_PIL_VENUS=y
 # CONFIG_MSM_PIL_GSS is not set
 CONFIG_MSM_PIL_PRONTO=y
 CONFIG_MSM_SCM=y
-# CONFIG_MSM_BUSPM_DEV is not set
+CONFIG_MSM_BUSPM_DEV=y
 CONFIG_MSM_TZ_LOG=y
 CONFIG_MSM_RPM_LOG=y
 CONFIG_MSM_RPM_STATS_LOG=y
@@ -502,7 +500,7 @@ CONFIG_MSM_ADSP_LOADER=y
 # CONFIG_MSM_SPM_V1 is not set
 CONFIG_MSM_SPM_V2=y
 CONFIG_MSM_L2_SPM=y
-# CONFIG_MSM_MULTIMEDIA_USE_ION is not set
+CONFIG_MSM_MULTIMEDIA_USE_ION=y
 CONFIG_MSM_OCMEM=y
 CONFIG_MSM_OCMEM_LOCAL_POWER_CTRL=y
 CONFIG_MSM_OCMEM_DEBUG=y
@@ -521,6 +519,7 @@ CONFIG_MSM_RTB_SEPARATE_CPUS=y
 CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL=y
 # CONFIG_USE_DEV_CTRL_VOLUME is not set
 # CONFIG_MSM_CPU_PWRCTL is not set
+# CONFIG_MSM_UARTDM_Core_v14 is not set
 CONFIG_MSM_BOOT_STATS=y
 CONFIG_MSM_XPU_ERR_FATAL=y
 CONFIG_MSM_CPR_REGULATOR=y
@@ -528,7 +527,7 @@ CONFIG_MSM_CPR_REGULATOR=y
 CONFIG_HTC_POWER_DEBUG=y
 CONFIG_MACH_A5=y
 CONFIG_MACH_NAME=""
-# CONFIG_HTC_DEBUG_RBCPR_8226 is not set
+CONFIG_HTC_DEBUG_RBCPR_8226=y
 
 #
 # System MMU
@@ -643,7 +642,8 @@ CONFIG_MIGRATION=y
 CONFIG_ZONE_DMA_FLAG=0
 CONFIG_BOUNCE=y
 CONFIG_VIRT_TO_BUS=y
-# CONFIG_KSM is not set
+CONFIG_KSM=y
+# CONFIG_KSM_HTC_POLICY is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_CLEANCACHE=y
 CONFIG_MEMORY_HOLE_CARVEOUT=y
@@ -669,7 +669,8 @@ CONFIG_CC_STACKPROTECTOR=y
 # Boot options
 #
 CONFIG_USE_OF=y
-# CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE is not set
+CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE=y
+CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE_NAMES=""
 CONFIG_ZBOOT_ROM_TEXT=0
 CONFIG_ZBOOT_ROM_BSS=0
 # CONFIG_ARM_APPENDED_DTB is not set
@@ -1149,9 +1150,11 @@ CONFIG_BT_HCISMD=y
 # CONFIG_BT_HCIUART is not set
 # CONFIG_BT_HCIBCM203X is not set
 # CONFIG_BT_HCIBPA10X is not set
+# CONFIG_BT_MSM_SLEEP is not set
 # CONFIG_BT_HCIBFUSB is not set
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
+CONFIG_MSM_BT_POWER=y
 # CONFIG_AF_RXRPC is not set
 CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
@@ -1173,8 +1176,12 @@ CONFIG_CFG80211_WEXT=y
 # CONFIG_CFG80211_ALLOW_RECONNECT is not set
 # CONFIG_MAC80211 is not set
 # CONFIG_WIMAX is not set
-# CONFIG_RFKILL is not set
+CONFIG_RFKILL=y
+CONFIG_RFKILL_PM=y
+CONFIG_RFKILL_LEDS=y
+# CONFIG_RFKILL_INPUT is not set
 # CONFIG_RFKILL_REGULATOR is not set
+# CONFIG_RFKILL_GPIO is not set
 # CONFIG_NET_9P is not set
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
@@ -1204,7 +1211,8 @@ CONFIG_REGMAP=y
 CONFIG_REGMAP_I2C=y
 CONFIG_REGMAP_SPI=y
 CONFIG_DMA_SHARED_BUFFER=y
-# CONFIG_GENLOCK is not set
+CONFIG_GENLOCK=y
+CONFIG_GENLOCK_MISCDEVICE=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 # CONFIG_SW_SYNC_USER is not set
@@ -1286,6 +1294,7 @@ CONFIG_BLK_DEV_RAM_SIZE=4096
 # CONFIG_UID_STAT is not set
 # CONFIG_BMP085 is not set
 # CONFIG_USB_SWITCH_FSA9480 is not set
+# CONFIG_WL127X_RFKILL is not set
 # CONFIG_TSPP is not set
 # CONFIG_CI_BRIDGE_SPI is not set
 # CONFIG_HAPTIC_ISA1200 is not set
@@ -1484,6 +1493,7 @@ CONFIG_USB_NET_ZAURUS=y
 # CONFIG_USB_NET_CX82310_ETH is not set
 # CONFIG_USB_NET_KALMIA is not set
 # CONFIG_USB_NET_QMI_WWAN is not set
+# CONFIG_USB_HSO is not set
 # CONFIG_USB_NET_INT51X1 is not set
 # CONFIG_USB_IPHETH is not set
 # CONFIG_USB_SIERRA_NET is not set
@@ -1712,6 +1722,7 @@ CONFIG_LEGACY_PTYS=y
 CONFIG_LEGACY_PTY_COUNT=256
 # CONFIG_SERIAL_NONSTANDARD is not set
 # CONFIG_N_GSM is not set
+# CONFIG_N_SMUX is not set
 # CONFIG_TRACE_SINK is not set
 CONFIG_DEVMEM=y
 CONFIG_DEVKMEM=y
@@ -1729,7 +1740,7 @@ CONFIG_DEVKMEM=y
 CONFIG_SERIAL_CORE=y
 CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_SERIAL_MSM is not set
-# CONFIG_SERIAL_MSM_HS is not set
+CONFIG_SERIAL_MSM_HS=y
 CONFIG_SERIAL_MSM_HSL=y
 # CONFIG_SERIAL_CIR is not set
 CONFIG_SERIAL_MSM_HSL_CONSOLE=y
@@ -2487,6 +2498,7 @@ CONFIG_RADIO_ADAPTERS=y
 #
 # Texas Instruments WL128x FM driver (ST based)
 #
+# CONFIG_RADIO_WL128X is not set
 CONFIG_RADIO_IRIS=y
 CONFIG_RADIO_IRIS_TRANSPORT=y
 
@@ -3647,6 +3659,7 @@ CONFIG_CRYPTO_BLKCIPHER=y
 CONFIG_CRYPTO_BLKCIPHER2=y
 CONFIG_CRYPTO_HASH=y
 CONFIG_CRYPTO_HASH2=y
+CONFIG_CRYPTO_RNG=y
 CONFIG_CRYPTO_RNG2=y
 CONFIG_CRYPTO_PCOMP2=y
 CONFIG_CRYPTO_MANAGER=y
@@ -3733,7 +3746,7 @@ CONFIG_CRYPTO_LZO=y
 #
 # Random Number Generation
 #
-# CONFIG_CRYPTO_ANSI_CPRNG is not set
+CONFIG_CRYPTO_ANSI_CPRNG=y
 # CONFIG_CRYPTO_USER_API_HASH is not set
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
 CONFIG_CRYPTO_HW=y
